Connected app with MongoDB using Mongoose; Added User Schema definition; Added SignUp and Login endpoints
